--- a/style.css
+++ b/style.css
@@ -1,133 +1,139 @@
 :root {
-    box-sizing: border-box;
+  box-sizing: border-box;
 
-    --orange: #FF940F;
-    --white: #F1E6D2;
-    --blue: #3B658B;
-    --grey: #6A665D;
-    --front-color: #2D3134;
-    --calc-color: #CEC0A5;
-    --black:#1B1B1B;
+  --orange: #ff940f;
+  --white: #f1e6d2;
+  --blue: #3b658b;
+  --grey: #6a665d;
+  --front-color: #2d3134;
+  --calc-color: #cec0a5;
+  --black: #1b1b1b;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Orbitron', sans-serif;
-    background: whitesmoke;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  font-family: "VT323", monospace;
+  background: whitesmoke;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .calculator {
-    margin-top: 10vh;
-    width: 21em;
-    background: var(--calc-color);
-    padding: 1em;
-    border-radius: 1em;
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  margin-top: 10vh;
+  width: 22em;
+  background: var(--calc-color);
+  padding: 1em;
+  border-radius: 1em;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+    rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+    rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 .calculator_wrapper {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto repeat(5, 1fr);
-    gap: 1em;
-    padding: 1em;
-    background: var(--front-color);
-    border-radius: 0.5em;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto repeat(5, 1fr);
+  gap: 1em;
+  padding: 1em;
+  background: var(--front-color);
+  border-radius: 0.5em;
 }
 
 .display {
-    overflow: hidden;
-    pointer-events: none;
-    border: 8px solid var(--black);
-    margin-top: 2em;
-    margin-bottom: 0.5em;
-    grid-column: 1/5;
-    background: black;
-    font-size: 2rem;
-    line-height: 2em;
-    text-shadow: 0 0 2px #fff;
-    color: #00FFFC;
-    animation: pulsate 0.6s cubic-bezier(1, 0, 0, 1) infinite alternate;
-    direction: rtl;
+  overflow: hidden;
+  pointer-events: none;
+  border: 8px solid var(--black);
+  margin-top: 1.4em;
+  margin-bottom: 0.5em;
+  grid-column: 1/5;
+  background: black;
+  font-size: 3.5rem;
+  line-height: 1.5;
+  text-shadow: 0 0 2px #fff;
+  color: #00fffc;
+  animation: pulsate 0.6s cubic-bezier(1, 0, 0, 1) infinite alternate;
+  text-align: right;
 }
 
 .num_wrapper {
-    border-right: 2px solid white;
+  border-right: 2px solid white;
 }
 
 .blink {
-    animation: blink 1s step-end infinite;
+  animation: blink 1s step-end infinite;
 }
 
 button {
-    cursor: pointer;
-    border-radius: 1em;
-    height: 3em;
-    border: 2px solid var(--black);
-    font-size: inherit;
-    transition: transform 600ms cubic-bezier(.3, .7, .4, 1);
+  cursor: pointer;
+  border-radius: 1em;
+  height: 3em;
+  border: 2px solid var(--black);
+  font-size: inherit;
+  transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
 }
 
 button:hover {
-    transform: translateY(-2px);
-    border: 2px solid black;
-    transition: transform 250ms cubic-bezier(.3, .7, .4, 1.5);
+  transform: translateY(-2px);
+  border: 2px solid black;
+  transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
 }
 
 button:active {
-    transform: translate(0);
-    border: 3px solid black;
-    opacity: 0.9;
-    transition: transform 34ms;
+  transform: translate(0);
+  border: 3px solid black;
+  opacity: 0.9;
+  transition: transform 34ms;
 }
 
 .orange,
 .blue {
-    border-radius: 0.1em;
+  border-radius: 0.1em;
 }
 
 .white {
-    background: var(--white);
-    color: var(--black);
+  background: var(--white);
+  color: var(--black);
 }
 
 .grey {
-    background: var(--grey);
-    color: var(--white);
+  background: var(--grey);
+  color: var(--white);
 }
 
 .blue {
-    background: var(--blue);
-    color: var(--white);
+  background: var(--blue);
+  color: var(--white);
 }
 
 .orange {
-    background: var(--orange);
-    color: var(--white);
+  background: var(--orange);
+  color: var(--white);
 }
 
+/* .equal { */
+/*     grid-column: 3/5; */
+/* } */
+
 @keyframes blink {
-    from,
-    to {
-        border-color: transparent;
-    }
-    50% {
-        border-color: #fff;
-    }
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: #fff;
+  }
 }
 
 @keyframes pulsate {
-    to {
-        opacity: 0.9;
-    }
+  to {
+    opacity: 0.9;
+  }
 }
