--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   box-sizing: border-box;
+  font-size: 1em;
 
   --orange: #ff940f;
   --white: #f1e6d2;
@@ -7,7 +8,13 @@
   --grey: #6a665d;
   --front-color: #2d3134;
   --calc-color: #cec0a5;
-  --black: #1b1b1b;
+  --dark: #1b1b1b;
+}
+
+@media screen and (max-width: 798px) {
+  :root {
+    font-size: 1.2em;
+  }
 }
 
 *,
@@ -19,7 +26,8 @@
 }
 
 body {
-  font-family: "VT323", monospace;
+  height: 100vh;
+  font-family: "Share Tech Mono", monospace;
   background: whitesmoke;
   display: flex;
   align-items: center;
@@ -27,7 +35,7 @@ body {
 }
 
 .calculator {
-  margin-top: 10vh;
+  position: relative;
   width: 22em;
   background: var(--calc-color);
   padding: 1em;
@@ -35,6 +43,30 @@ body {
   box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
     rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
     rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+
+.calculator::before {
+  position: absolute;
+  display: block;
+  content: "";
+  width: 10em;
+  height: 4em;
+  left: 50%;
+  transform: translate(-50%, 0.9em);
+  border-radius: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.calculator::after {
+  top: 0;
+  position: absolute;
+  display: block;
+  content: "\205D    \205D    \205D";
+  color: rgba(0, 0, 0, 0.4);
+  font-size: 2.5rem;
+  left: 50%;
+  transform: translate(-50%, 1em);
+  border-radius: 100%;
 }
 
 .calculator_wrapper {
@@ -61,6 +93,7 @@ body {
   color: #00fffc;
   animation: pulsate 0.6s cubic-bezier(1, 0, 0, 1) infinite alternate;
   text-align: right;
+  outline: 1px solid rgba(206, 192, 165, 0.3);
 }
 
 .num_wrapper {
@@ -72,10 +105,35 @@ body {
 }
 
 button {
+  border: 2px solid #1a1717;
+  border-radius: 1em;
+  box-shadow: 1px 1px var(--dark), 2px 2px #1a171a;
+  color: #fff;
+  position: relative;
+  text-transform: uppercase;
+  transition: transform 0.2s linear, box-shadow 0.2s linear;
+  font-family: inherit;
+  font-size: 1.8rem;
+
+  cursor: pointer;
+}
+
+button:hover {
+  transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+  animation: upDown 0.1s;
+}
+
+button:active {
+  transform: translate(2px, 2px);
+  box-shadow: 0 0 var(--dark), 0 0 black;
+}
+
+/*
+button {
   cursor: pointer;
   border-radius: 1em;
   height: 3em;
-  border: 2px solid var(--black);
+  border: 2px solid var(--dark);
   font-size: inherit;
   transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
 }
@@ -92,6 +150,8 @@ button:active {
   opacity: 0.9;
   transition: transform 34ms;
 }
+
+*/
 
 .orange,
 .blue {
@@ -116,6 +176,7 @@ button:active {
 .orange {
   background: var(--orange);
   color: var(--white);
+  color: black;
 }
 
 @keyframes blink {
@@ -124,12 +185,22 @@ button:active {
     border-color: transparent;
   }
   50% {
-    border-color: #fff;
+    border-color: #00fffc;
   }
 }
 
 @keyframes pulsate {
   to {
     opacity: 0.9;
+  }
+}
+
+@keyframes upDown {
+  from {
+    transform: translateY(-1px);
+  }
+
+  to {
+    transform: translateY(1px);
   }
 }
