--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ body {
 }
 
 .display {
-  overflow: hidden;
   pointer-events: none;
   border: 8px solid var(--black);
   margin-top: 1.4em;
@@ -97,6 +96,7 @@ body {
 }
 
 .display_inner {
+  word-break: break-all;
   border-right: 2px solid white;
 }
 
@@ -127,31 +127,6 @@ button:active {
   transform: translate(2px, 2px);
   box-shadow: 0 0 var(--dark), 0 0 black;
 }
-
-/*
-button {
-  cursor: pointer;
-  border-radius: 1em;
-  height: 3em;
-  border: 2px solid var(--dark);
-  font-size: inherit;
-  transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
-}
-
-button:hover {
-  transform: translateY(-2px);
-  border: 2px solid black;
-  transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
-}
-
-button:active {
-  transform: translate(0);
-  border: 3px solid black;
-  opacity: 0.9;
-  transition: transform 34ms;
-}
-
-*/
 
 .orange,
 .blue {
